--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,6 +1,10 @@
 <ion-view view-title="Dashboard">
   <ion-content class="padding">
-    <div class="list card">
+    <ion-refresher pulling-text="Pull to refresh..." on-refresh="refresh()"></ion-refresher>
+    <div style="font-size: 17px; text-align: center; background: white; border-bottom: 0px; padding-top: 0px; padding-bottom: 0px;" class="item item-divider">
+      <a class="button button-block button-royal" href="#/tab/manage-schedule-calendar"><i class="icon ion-calendar"></i> View Calendar Schedules</a>
+    </div>
+    <div class="list card" style="margin-top: 0px;">
       <div class="item item-divider" ng-click="redirectToAppointments()">
         <i class="icon ion-ios-book"></i>
         Appointments
@@ -8,14 +12,19 @@
       <div class="item" ng-click="redirectToAppointments()">
         <div class="row">
           <div class="col  text-center">
-
-              <b><h1 class="energized">{{appointments.pending.length}}</h1></b>
+              <div ng-if="isAppointmentsLoading" style="text-align: center;">
+                <ion-spinner icon="spiral"></ion-spinner><br>
+              </div>
+              <b ng-if="!isAppointmentsLoading"><h1 class="energized">{{appointments.pending.length}}</h1></b>
               <b>Pending</b>
 
 
           </div>
           <div class="col text-center">
-              <b><h1 class="positive">{{appointments.accepted.length}}</h1></b>
+              <div ng-if="isAppointmentsLoading" style="text-align: center;">
+                <ion-spinner icon="spiral"></ion-spinner><br>
+              </div>
+              <b ng-if="!isAppointmentsLoading"><h1 class="positive">{{appointments.accepted.length}}</h1></b>
               <b>Accepted</b>
           </div>
         </div>
@@ -24,14 +33,19 @@
         <div class="row">
           <div class="row">
             <div class="col  text-center">
-
-              <b><h1 class="balanced">{{appointments.completed.length}}</h1></b>
+              <div ng-if="isAppointmentsLoading" style="text-align: center;">
+                <ion-spinner icon="spiral"></ion-spinner><br>
+              </div>
+              <b ng-if="!isAppointmentsLoading"><h1 class="balanced">{{appointments.completed.length}}</h1></b>
               <b>Completed</b>
 
 
             </div>
             <div class="col text-center">
-              <b><h1 class="assertive" >{{appointments.canceled.length}}</h1></b>
+              <div ng-if="isAppointmentsLoading" style="text-align: center;">
+                <ion-spinner icon="spiral"></ion-spinner><br>
+              </div>
+              <b ng-if="!isAppointmentsLoading"><h1 class="assertive" >{{appointments.canceled.length}}</h1></b>
               <b>Canceled</b>
             </div>
           </div>
@@ -40,13 +54,23 @@
     </div>
 
     <div class="list card">
+
       <div class="item item-divider">
         <i class="icon ion-ios-chatboxes"></i>
         Inbox
       </div>
-      <a href="#/tab/chats" class="item item-icon-left">
-        <i style="font-size: 45px;" class="icon ion-email-unread assertive"></i>
-        <b> 3</b> New Messages
+      <div ng-if="isMessagesLoading" style="text-align: center; padding-top: 25px;">
+        <ion-spinner icon="spiral"></ion-spinner><br>
+        <span>Loading Messages...</span>
+      </div>
+      <a ng-if="newMessages === 0 && !isMessagesLoading" href="#/tab/chats" class="item">
+        No New Messages
+      </a>
+      <a ng-if="newMessages > 0" href="#/tab/chats" class="item item-icon-left">
+        <div>
+          <i style="font-size: 45px;" class="icon ion-email-unread assertive"></i>
+          <b> {{newMessages}}</b> New Message<span ng-if="newMessages > 1">s</span>
+        </div>
       </a>
     </div>
 
@@ -55,11 +79,15 @@
         <i class="icon ion-ios-compose"></i>
         Reviews
       </div>
-      <a href="#" class="item">
-        <b>5</b> New Reviews
+      <div ng-if="isReviewsLoading" style="text-align: center; padding-top: 25px;">
+        <ion-spinner icon="spiral"></ion-spinner><br>
+        <span>Loading Reviews...</span>
+      </div>
+      <a href="#/tab/services" class="item" ng-if="!isReviewsLoading">
+        <b ng-if="newReviews > 0">{{newReviews}}</b> <span ng-if="newReviews === 0">No</span> New Reviews
       </a>
     </div>
-
+<!--
     <div class="list card">
       <div class="item item-divider">
         <i class="icon ion-android-notifications"></i>
@@ -70,6 +98,6 @@
 
         <b>11</b> New Notifications
       </a>
-    </div>
+    </div> -->
   </ion-content>
 </ion-view>
